[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pfc-gateway"
version = "0.1.0"
description = "HTTP REST query server for PFC cold archives — no DuckDB required"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["pfc", "cratedb", "cold-storage", "grafana", "rest", "archive", "jsonl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Archiving",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
all = ["boto3>=1.34"]

[project.scripts]
pfc-gateway = "pfc_gateway:app"

[project.urls]
Homepage    = "https://github.com/ImpossibleForge/pfc-gateway"
Repository  = "https://github.com/ImpossibleForge/pfc-gateway"
Issues      = "https://github.com/ImpossibleForge/pfc-gateway/issues"
