[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pfc-gateway"
version = "0.3.0"
description = "HTTP REST query server for PFC cold archives — no DuckDB required"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["PFC", "CrateDB", "cold-storage", "Grafana", "REST", "archive", "JSONL"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
all = ["boto3>=1.34"]

[project.urls]
Repository = "https://github.com/ImpossibleForge/pfc-gateway"
Issues = "https://github.com/ImpossibleForge/pfc-gateway/issues"

